--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     },
     "content_scripts":[
         {
-            "matches": ["<all_urls>"],
+            "matches": ["https://*.hyperiondev.cogrammar.com/reviewer/generate_review/*"],
             "js": ["./content.js"],
             "css": ["./style.css"]
         }
