--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
     "version": "1.0",
-    "name": "Fetch folder",
+    "name": "Student File Sniffer (SFS)",
+    "author": "J.Morta",
     "description": "Opens the currently reviewed student dropbox folder",
     "permissions": ["tabs","storage", "activeTab", "scripting"],
     "background": {
