--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     },
     "content_scripts":[
         {
-            "matches": ["https://*.hyperiondev.cogrammar.com/reviewer/generate_review/*"],
+            "matches": ["https://*.hyperiondev.cogrammar.com/reviewer/generate_review/*", 
+            "https://*.hyperiondev.cogrammar.com/reviewer/generate_dfe_review/*"],
             "js": ["./content.js"],
             "css": ["./style.css"]
         }
