updates to HTML

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
             "https://*.hyperiondev.cogrammar.com/reviewer/generate_dfe_review/*",
             "https://*.hyperiondev.cogrammar.com/reviewer/dashboard/*"
         ],
-            "js": ["./content.js"],
+            "js": ["./content.js", "./dropboxAPI.js"],
             "css": ["./style.css"]
         }
     ],
